--- a/index.html
+++ b/index.html
@@ -289,6 +289,86 @@
                   <p>OBJETIVOS DO DESENVOLVIMENTO SUSTENTÁVEL (ODS)
                     Assinalar quantas opções forem necessáriaS
                     </p>
+                    <div>
+                      <input class="Box-selection" type="checkbox"name="erradiacao"
+                      checked>
+                      <label for="erradiacao">Erradicação da Pobreza</label>
+                    </div>
+                    <div>
+                      <input class="Box-selection" type="checkbox"name="fome">
+                      <label for="fome">Fome Zero e Agricultura Sustentável</label>
+                    </div>
+  
+                    <div>
+                      <input class="Box-selection" type="checkbox"name="saude_bem"
+                      checked>
+                      <label for="saude_bem">Saúde e Bem Estar</label>
+                    </div>
+                    <div>
+                      <input class="Box-selection" type="checkbox"name="educacao_qualidade">
+                      <label for="educacao_qualidade">Educação de Qualidade</label>
+                    </div>
+  
+                    <div>
+                      <input class="Box-selection" type="checkbox"name="igualdade_g"
+                      checked>
+                      <label for="igualdade_g">Igualdade de Gênero</label>
+                    </div>
+                    <div>
+                      <input class="Box-selection" type="checkbox"name="agua">
+                      <label for="agua">Água Potável e Saneamento</label>
+                    </div>
+  
+                    <div>
+                      <input class="Box-selection" type="checkbox"name="energia_a"
+                      checked>
+                      <label for="energia_a">Energia Acessível e Limpa</label>
+                    </div>
+                    <div>
+                      <input class="Box-selection" type="checkbox"name="tab_descente">
+                      <label for="tab_descente">Trabalho Descente e Crescimento Econômico</label>
+                    </div>
+  
+                    <div>
+                      <input class="Box-selection" type="checkbox"name="industria"
+                      checked>
+                      <label for="industria">Indústria, Inovação e Infraestrutura </label>
+                    </div>
+                    <div>
+                      <input class="Box-selection" type="checkbox"name="reducao">
+                      <label for="reducao">Redução de Desigualdades</label>
+                    </div>
+  
+                    <div>
+                      <input class="Box-selection" type="checkbox"name="cultura"
+                      checked>
+                      <label for="cultura">Cultura</label>
+                    </div>
+                    <div>
+                      <input class="Box-selection" type="checkbox"name="saude">
+                      <label for="saude">Saúde</label>
+                    </div>
+  
+                    <div>
+                      <input class="Box-selection" type="checkbox"name="dhj"
+                      checked>
+                      <label for="dhj">Direitos Humanos e Justiça</label>
+                    </div>
+                    <div>
+                      <input class="Box-selection" type="checkbox"name="tec_prod">
+                      <label for="tec_prod">Tecnologia e Produção </label>
+                    </div>
+  
+                    <div>
+                      <input class="Box-selection" type="checkbox"name="edu"
+                      checked>
+                      <label for="edu">Educação</label>
+                    </div>
+                    <div>
+                      <input class="Box-selection" type="checkbox"name="tab">
+                      <label for="tab">Trabalho</label>
+                    </div>
+  
 
 
                   </div> <!--content-->
