--- a/home.html
+++ b/home.html
@@ -8,6 +8,6 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="index.html">ACESSAR ANEXOIV EVENTOS</a>
+    <a href="index.html">ACESSAR ANEXOIV DE EVENTOS</a>
 </body>
 </html>
