--- a/index.html
+++ b/index.html
@@ -684,8 +684,8 @@
                       <label for="drogas-dep">Uso de drogas e dependência química</label>
                     </div>
 
-
-                  </div> <!--content-->
+<!--content --------------------------------------------------------------------------------------------------------->
+                  </div> 
             </form>
         </div>
     </section>
