--- a/index.html
+++ b/index.html
@@ -689,6 +689,6 @@
             </form>
         </div>
     </section>
-    <a href="home.html">Proximo</a>
+    <a href="home.html">next</a>
 </body>
 </html>
