--- a/home.html
+++ b/home.html
@@ -8,6 +8,11 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="index.html">ACESSAR ANEXO IV DE EVENTOS</a>
+    <h1>CADASTRO DE ATIVIDADES</h1>
+    <p>MODALIDADE:</p>
+    <ol>
+        <a href="index.html">Eventos</a>
+        <a href="#">Projetos</a>
+    </ol>
 </body>
 </html>
