--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ATV EXTENSAO EVENTO</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
     <h1> ANEXO VI</h1>
     <h2>FORMULÁRIO ESPECÍFICO PARA ATIVIDADES DE EXTENSÃO</h2>
     <h3>MODALIDADE EVENTO</h3>
-    <img src="extensao.png" alt="extensao">
+    <!-- <img src="./style/extensao.png" alt="extensao" aling="center"> -->
 
     <section class="content">
         <div class="info">
@@ -689,6 +689,8 @@
             </form>
         </div>
     </section>
-    <a href="home.html">next</a>
+    <form class="sub" method="post" action="index.php">
+      <input  type="submit" value="Enviar" />
+    </form>
 </body>
 </html>
