--- a/formulario.html
+++ b/formulario.html
@@ -530,67 +530,67 @@
                 </div>
                 
                 <div>
-                  <input class="Box-selection" type="checkbox"name="escolha10[]">
+                  <input class="Box-selection" type="checkbox"name="escolha10[]" value="Pessoas com deficiências, incapacidades e necessidades especiais ">
                   <label for="pessoa-def">Pessoas com deficiências, incapacidades e necessidades especiais </label>
                 </div>
 
                 <div>
-                  <input class="Box-selection" type="checkbox"name="propriedade-intelectual">
-                  <label for="propriedade-intelectual">Propriedade intelectual e patente </label>
+                  <input class="Box-selection" type="checkbox"name="escolha10[]" value="Propriedade intelectual e patente">
+                  <label for="propriedade-intelectual">Propriedade intelectual e patente</label>
                 </div>
                 
                 <div>
-                  <input class="Box-selection" type="checkbox"name="questoes-ambientais">
+                  <input class="Box-selection" type="checkbox"name="escolha10[]" value="Questões ambientais">
                   <label for="erradiacao">Questões ambientais</label>
                 </div>
 
                 <div>
-                  <input class="Box-selection" type="checkbox"name="recursos-hidricos">
+                  <input class="Box-selection" type="checkbox"name="escolha10[]" value="Recursos hídricos">
                   <label for="recursos-hidricos">Recursos hídricos</label>
                 </div>
 
                 <div>
-                  <input class="Box-selection" type="checkbox"name="residuos-solidos">
+                  <input class="Box-selection" type="checkbox"name="escolha10[]" value="Resíduos sólidos">
                   <label for="residuos-solidos">Resíduos sólidos</label>
                 </div>
 
                 <div>
-                  <input class="Box-selection" type="checkbox"name="saude-aniaml">
+                  <input class="Box-selection" type="checkbox"name="escolha10[]" value="Saúde animal">
                   <label for="saude-aniaml">Saúde animal</label>
                 </div>
 
                 <div>
-                  <input class="Box-selection" type="checkbox"name="saude-familia">
+                  <input class="Box-selection" type="checkbox"name="escolha10[]" value="Saúde da família">
                   <label for="saude-familia">Saúde da família</label>
                 </div>
 
                 <div>
-                  <input class="Box-selection" type="checkbox"name="saude-protecao">
+                  <input class="Box-selection" type="checkbox"name="escolha10[]" value="Saúde e proteção no trabalho">
                   <label for="saude-protecao">Saúde e proteção no trabalho</label>
                 </div>
 
                 <div>
-                  <input class="Box-selection" type="checkbox"name="seg-publica">
+                  <input class="Box-selection" type="checkbox"name="escolha10[]" value="Segurança pública e defesa social">
                   <label for="seg-publica">Segurança pública e defesa social</label>
                 </div>
 
                 <div>
-                  <input class="Box-selection" type="checkbox"name="tec-info">
+                  <input class="Box-selection" type="checkbox"name="escolha10[]" value="Tecnologia da informação">
                   <label for="tec-info">Tecnologia da informação</label>
                 </div>
 
                 <div>
-                  <input class="Box-selection" type="checkbox"name="terceira-serie">
+                  <input class="Box-selection" type="checkbox"name="escolha10[]" value="Terceira idade">
                   <label for="Terceira idade">Terceira idade</label>
                 </div>
 
                 <div>
-                  <input class="Box-selection" type="checkbox"name="Turismo">
+                  <input class="Box-selection" type="checkbox"name="escolha10[]" value="Turismo">
                   <label for="Turismo">Turismo</label>
                 </div>
 
                 <div>
-                  <input class="Box-selection" type="checkbox"name="drogas-dep">
+                  <input class="Box-selection" type="checkbox"name="escolha10[]" value="Uso de drogas e dependência química">
                   <label for="drogas-dep">Uso de drogas e dependência química</label>
                 </div>        
       <input class="submit"type="submit" value="Enviar"/>
