receptor OK e Style

--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
     <p>MODALIDADE:</p>
     <nav>
         <ul class="menu">
-              <li><button> <a href="formulario.php">Eventos</a></button></li>
+              <li><button> <a href="/php/formulario.php">Eventos</a></button></li>
               <li><button> <a href="index.html">Projetos</a></button></li>     
       </ul>
       </nav>
